Name:                cabal-base
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            A skeleton from which to start your own project.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/gelisam/cabal-base
License:             PublicDomain
License-file:        LICENSE
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com

-- Category:            Codec
-- Category:            Concurrency
-- Category:            Control
-- Category:            Data
-- Category:            Database
-- Category:            Development
-- Category:            Distribution
-- Category:            Game
-- Category:            Graphics
-- Category:            Language
Category:            Math
-- Category:            Network
-- Category:            Sound
-- Category:            System
-- Category:            Testing
-- Category:            Text
-- Category:            Web

Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:  README.md,
                     Makefile

Library
  hs-source-dirs: src
  
  Exposed-modules:     Math.Fib
  -- Other-modules:       
  
  Build-depends:       base >= 4 && < 5

executable cabal-base-demo
  build-depends:  base >= 4 && < 5,
                  cabal-base >= 0.1 && < 1
  main-is:        Main.hs
  hs-source-dirs: demo
