Name:                conway
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            A comonadic implementation of Conway's Game of Life.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/gelisam/conway
License:             PublicDomain
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com

Category:            Demo

Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:  README.md,
                     Makefile

Library
  hs-source-dirs: src
  
  Exposed-modules:     Conway
  -- Other-modules:       
  
  Build-depends:       base,
                       comonad,
                       comonad-transformers
  ghc-options: -W -Wall

executable conway-demo
  build-depends:  base,
                  conway
  main-is:        Main.hs
  hs-source-dirs: demo
  ghc-options: -W -Wall
